# fastspline

./: .gitignore  BENCHMARK_RESULTS.md  BISPLREP_SUMMARY.md  CFUNC_USAGE.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPLETE_VALIDATION_SUMMARY.md  DERIVATIVE_FIX_SUMMARY.md  DERIVATIVE_MISMATCH_REPORT.md  DESIGN.md  DETAILED_VALIDATION_ANALYSIS.md  F2PY_FIX_SUMMARY.md  FINAL_VALIDATION_REPORT.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  README.md  README_BISPEV_WRAPPER.md  README_BISPLREP.md  TODO.md  VALIDATION_PLAN.md  VALIDATION_REPORT.md  additional_validation.py  analyze_scipy_bisplrep.py  ascii_derivative_plot.py  ascii_side_by_side.py  benchmark_bispev.py  benchmark_bispl_scipy.py  benchmark_bisplrep.py  benchmark_bisplrep_comprehensive.py  benchmark_bisplrep_performance.py  benchmark_cfunc.py  benchmark_comprehensive.py  benchmark_scaling.py  benchmark_scipy_comparison.py  benchmark_speed_test.py  bispev_ctypes.py  bisplrep_fixed.py  bisplrep_optimized.py  (+75 more)
benchmarks/: benchmark_bisplrep_comprehensive.py  benchmark_c_interop.py  benchmark_comprehensive.py  benchmark_large_meshgrid.py  benchmark_meshgrid.py  benchmark_unstructured_scaling.py  plot_performance.py  scaling_analysis.py
docs/: COMPLETED.md  README_original.md
examples/: basic_usage.py  benchmark_all_functions.py  benchmark_bisplrep_bisplev.py  benchmark_bisplrep_performance.py  benchmark_bspline_only.py  benchmark_dierckx_vs_numba.py  benchmark_performance.py  benchmark_scaling.py  bisplrep_example.py  bisplrep_performance_plot.py  comprehensive_demo.py  demo_1d_splines.py  demo_derivatives.py  example_missing_data_visualization.py  sergei_splines_demo.py  (+6 more)
(+228 files in other folders)
