[build-system]
requires = ["setuptools>=45", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "fastspline"
version = "0.1.0"
description = "High-performance bivariate spline interpolation implementations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "FastSpline Contributors"},
]
keywords = ["spline", "interpolation", "performance", "numba", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.6.0",
]

[project.optional-dependencies]
numba = ["numba>=0.55.0"]
dev = [
    "pytest>=6.0",
    "matplotlib>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/krystophny/fastspline"
Repository = "https://github.com/krystophny/fastspline"
Documentation = "https://github.com/krystophny/fastspline#readme"
Issues = "https://github.com/krystophny/fastspline/issues"

[tool.setuptools.packages.find]
include = ["fastspline*"]

[tool.setuptools.package-data]
fastspline = ["lib/*.so"]